--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -4,3 +4,4 @@ $colorSelection: #f16d7f;
 $mainColorHover: lighten($mainColor, 40%);
 $colorSelectionHover: lighten($colorSelection, 10%);
 $bgColorImg: #e8e8e8;
+$bgColorHover: #3a3838;
