--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -132,3 +132,187 @@
   }
 }
 
+.featured{
+  margin-bottom: 113px;
+
+  &__text{
+    margin-bottom: 60px;
+    text-align: center;
+      h3{
+        font-size: 30px;
+        font-weight: 700;
+        letter-spacing: 0.75px;
+        margin-bottom: 16px;
+      }
+    &__description{
+      font-size: 14px;
+      font-weight: 400;
+      letter-spacing: 0.35px;
+    }
+  }
+
+  &__items{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 79px;
+
+    &__item{
+      &:nth-child(-n+4){
+        margin-bottom: 60px;
+      }
+      margin-right: 30px;
+      &:nth-child(4n){
+        margin-right: 0;
+      }
+      &__link{
+        display: block;
+        &__title{
+          font-size: 13px;
+          font-weight: 700;
+          text-transform: uppercase;
+          padding-left: 14px;
+        }
+        &__price{
+          font-size: 16px;
+          font-weight: 700;
+          text-transform: uppercase;
+          color: $colorSelection;
+          padding-left: 14px;
+          padding-bottom: 21px;
+          margin-bottom: 0;
+        }
+      }
+
+      position: relative;
+
+      &__hover{
+        display: none;
+        &__add{
+          border: 1px solid #ffffff;
+          background: transparent;
+          color: #ffffff;
+          width: 123px;
+          height: 39px;
+          margin-top: 98px;
+          img{
+            margin-right: 8px;
+          }
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          opacity: 1;
+          &:hover{
+            cursor: pointer;
+            color: $colorSelection;
+          }
+        }
+      }
+
+      &:hover{
+        > .featured__items__item__hover{
+          display: flex;
+          justify-content: center;
+          background: $bgColorHover;
+          width: 261px;
+          height: 280px;
+          position: absolute;
+          left:0;
+          top:0;
+          opacity: 0.75;
+        }
+
+        > .featured__items__item__link{
+          box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
+        }
+      }
+    }
+  }
+
+  &__linkToAll{
+    display: flex;
+    justify-content: center;
+    &__a{
+      background-color: $colorSelection;
+      padding: 18px 18px 18px 24px;
+      box-sizing: border-box;
+      color: #ffffff;
+      font-size: 16px;
+      font-weight: 700;
+      letter-spacing: 0.4px;
+    }
+  }
+
+}
+
+.fa-long-arrow-alt-right{
+  font-size: 15px;
+  margin-left: 9px;
+}
+
+.offer{
+  margin-bottom: 97px;
+  display: flex;
+  min-height: 516px;
+
+  &__left{
+    background-image: url("../../img/offer.jpg");
+    background-repeat: no-repeat;
+    padding-left: 39px;
+    padding-top: 146px;
+    box-sizing: border-box;
+    width: 67%;
+    &__first{
+      font-size: 54px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 1.5px;
+      color: #ffffff;
+      margin: 0;
+      span{
+        color:$colorSelection;
+      }
+    }
+    &__second{
+      font-size: 32px;
+      letter-spacing: 0.9px;
+      color: #ffffff;
+      text-transform: uppercase;
+      margin: 0;
+      font-weight: 400;
+    }
+  }
+
+  &__right{
+    padding: 0 30px 0 30px;
+    box-sizing: border-box;
+    background-color: #222224;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 33%;
+    min-height: 100%;
+
+    &__content{
+      color: #ffffff;
+      display: flex;
+      align-items: start;
+      &__text{
+        margin-left: 33px;
+        h3{
+          color: #fbfbfb;
+          font-size: 20px;
+          font-weight: 700;
+          letter-spacing: 0.5px;
+          margin: 0;
+        }
+        &__p{
+          color: #fbfbfb;
+          font-size: 14px;
+          font-weight: 300;
+          line-height: 24px;
+          letter-spacing: 0.35px;
+        }
+      }
+    }
+  }
+}
