--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -5,3 +5,4 @@ $mainColorHover: lighten($mainColor, 40%);
 $colorSelectionHover: lighten($colorSelection, 10%);
 $bgColorImg: #e8e8e8;
 $bgColorHover: #3a3838;
+$colorFooter: #e6e6e6;
