--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
-body{
+*{
   margin: 0;
   padding: 0;
+}
+
+body{
   width: 100%;
   color: $mainColor;
   font-family: 'Lato', sans-serif;
@@ -23,4 +26,8 @@ input, button {
   outline: none;
   overflow: hidden;
   border: none;
+}
+
+ul{
+  list-style-type: none;
 }
