--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -6,3 +6,5 @@ $colorSelectionHover: lighten($colorSelection, 10%);
 $bgColorImg: #e8e8e8;
 $bgColorHover: #3a3838;
 $colorFooter: #e6e6e6;
+$colorNewArrivals: #f8f3f4;
+$colorOrderedTable: #656565;
