--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -8,3 +8,5 @@ $bgColorHover: #3a3838;
 $colorFooter: #e6e6e6;
 $colorNewArrivals: #f8f3f4;
 $colorOrderedTable: #656565;
+$backgroundLight: #f7f7f7;
+$backgroundDark: #222224;
