--- a/styles/css/singlePage.css
+++ b/styles/css/singlePage.css
@@ -327,293 +327,198 @@ ul {
         .footer__content__social__link__unactive {
           opacity: 0.3; }
 
-.breadcrumbs {
+.breadcrumbsSingle {
   min-height: 148px;
   background-color: #f8f3f4;
   display: flex;
-  align-items: center;
-  margin-bottom: 90px; }
-  .breadcrumbs__content {
+  align-items: center; }
+  .breadcrumbsSingle__content {
     display: flex;
     justify-content: space-between; }
-    .breadcrumbs__content h2 {
+    .breadcrumbsSingle__content h2 {
       color: #f16d7f;
       font-size: 24px;
       font-weight: 900;
       line-height: 20px;
       text-transform: uppercase; }
-    .breadcrumbs__content__nav {
+    .breadcrumbsSingle__content__nav {
       font-size: 14px;
       font-weight: 300;
       line-height: 20px;
       text-transform: uppercase; }
-      .breadcrumbs__content__nav__a {
+      .breadcrumbsSingle__content__nav__a {
         color: #636363; }
-        .breadcrumbs__content__nav__a__active {
+        .breadcrumbsSingle__content__nav__a__active {
           color: #f16d7f;
           font-weight: 700; }
-        .breadcrumbs__content__nav__a:hover {
+        .breadcrumbsSingle__content__nav__a:hover {
           color: #e21632; }
 
-.orderedGoods__headers {
-  border-bottom: 1px solid #eaeaea;
-  padding-bottom: 20px;
+.girlBig {
+  background-color: #f7f7f7;
   display: flex;
-  font-size: 13px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: -0.2px; }
-  .orderedGoods__headers__details {
-    width: 40%; }
-  .orderedGoods__headers__price {
-    width: 15%;
-    text-align: center; }
-  .orderedGoods__headers__quantity {
-    width: 15%;
-    text-align: center; }
-  .orderedGoods__headers__shipping {
-    width: 10%;
-    text-align: center; }
-  .orderedGoods__headers__subtotal {
-    width: 10%;
-    text-align: center; }
-  .orderedGoods__headers__action {
-    width: 10%;
-    text-align: center; }
-.orderedGoods__item {
-  padding: 25px 0;
+  justify-content: center;
+  padding: 11px 0 0 42px; }
+  .girlBig img {
+    margin-left: -24px; }
+
+.womenCollection {
+  margin-top: -85px;
+  background-color: #ffffff;
+  min-height: 730px;
+  padding-top: 73px;
+  margin-bottom: 119px;
   display: flex;
-  border-bottom: 1px solid #eaeaea; }
-  .orderedGoods__item:nth-last-child(2) {
-    margin-bottom: 44px; }
-  .orderedGoods__item__details {
-    display: flex;
-    width: 40%; }
-    .orderedGoods__item__details img {
-      margin-right: 20px; }
-    .orderedGoods__item__details__text {
-      padding: 13px 0 22px 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between; }
-      .orderedGoods__item__details__text h4 {
-        font-size: 13px;
-        font-weight: 600;
-        text-transform: uppercase; }
-      .orderedGoods__item__details__text__characteristics p {
-        font-size: 13px;
-        color: #575757;
-        font-weight: 500;
-        line-height: 20px; }
-        .orderedGoods__item__details__text__characteristics p span {
-          color: #6f6e6e;
-          font-weight: 300; }
-  .orderedGoods__item__price {
-    width: 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .orderedGoods__item__price p {
-      font-size: 13px;
-      font-weight: 600;
-      color: #656565; }
-  .orderedGoods__item__quantity {
-    width: 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .orderedGoods__item__quantity form input[type="number"] {
-      width: 54px;
-      height: 30px;
-      text-align: center;
-      border: 1px solid #eaeaea;
-      font-size: 13px;
-      font-weight: 400;
-      color: #656565; }
-      .orderedGoods__item__quantity form input[type="number"]::placeholder {
-        font-size: 13px;
-        font-weight: 400;
-        text-align: center;
-        color: #656565; }
-  .orderedGoods__item__shipping {
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .orderedGoods__item__shipping p {
-      color: #656565;
-      font-size: 13px;
-      font-weight: 600;
-      text-transform: uppercase; }
-  .orderedGoods__item__subtotal {
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .orderedGoods__item__subtotal p {
-      font-size: 13px;
-      font-weight: 600;
-      color: #656565; }
-  .orderedGoods__item__action {
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-.orderedGoods__buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 63px; }
-  .orderedGoods__buttons__button {
-    padding: 20px 40px;
-    border: 1px solid #eaeaea;
-    color: #4a4a4a;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #eaeaea; }
+  .womenCollection__slider h4 {
     font-size: 14px;
     font-weight: 700;
-    text-transform: uppercase; }
-    .orderedGoods__buttons__button:hover {
-      background-color: #eaeaea; }
-
-.fa-times-circle {
-  color: #c0c0c0;
-  font-size: 16px;
-  font-weight: 400; }
-  .fa-times-circle:hover {
-    color: #888888; }
-
-.orderForms {
-  display: flex;
-  margin-bottom: 79px; }
-  .orderForms__address {
-    width: 30%;
-    margin-right: 3%; }
-    .orderForms__address h3 {
-      font-size: 16px;
-      font-weight: 700;
-      text-transform: uppercase;
-      margin-bottom: 22px; }
-    .orderForms__address select {
-      min-height: 45px;
-      margin-bottom: 20px;
-      font-size: 13px;
-      font-weight: 300;
-      border: 1px solid #eaeaea;
-      width: 100%;
-      padding-left: 18px;
-      padding-right: 12px;
-      box-sizing: border-box; }
-      .orderForms__address select:focus {
-        outline: none; }
-    .orderForms__address input[type="text"] {
-      min-height: 45px;
-      width: 100%;
-      border: 1px solid #eaeaea;
-      font-size: 13px;
-      font-weight: 300;
-      padding-left: 18px;
-      margin-bottom: 20px;
-      box-sizing: border-box; }
-      .orderForms__address input[type="text"]::placeholder {
-        color: #b1b1b1; }
-    .orderForms__address input[type="number"] {
-      min-height: 45px;
-      width: 100%;
-      border: 1px solid #eaeaea;
-      font-size: 13px;
-      font-weight: 300;
-      padding-left: 18px;
-      margin-bottom: 20px;
-      box-sizing: border-box; }
-      .orderForms__address input[type="number"]::placeholder {
-        color: #b1b1b1; }
-    .orderForms__address input[type="submit"] {
-      padding: 12px 15px;
-      font-size: 11px;
-      font-weight: 700;
-      text-transform: uppercase;
-      background-color: #ffffff;
-      border: 1px solid #eaeaea;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: #f16d7f;
+    margin-bottom: 14px; }
+  .womenCollection__slider__links {
+    height: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 18px; }
+    .womenCollection__slider__links__a {
+      width: 30%;
+      height: 2px;
+      background-color: #eaeaea;
       cursor: pointer; }
-      .orderForms__address input[type="submit"]:hover {
-        background-color: #eaeaea; }
-  .orderForms__coupon {
-    width: 30%;
-    margin-right: 3%; }
-    .orderForms__coupon h3 {
-      font-size: 16px;
-      font-weight: 700;
-      text-transform: uppercase;
-      margin-bottom: 28px; }
-    .orderForms__coupon p {
-      color: #000000;
+      .womenCollection__slider__links__a:hover {
+        background-color: #888888; }
+      .womenCollection__slider__links__a__active {
+        height: 4px;
+        background-color: #f16d7f; }
+  .womenCollection h2 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+    text-transform: uppercase;
+    margin-bottom: 67px;
+    color: #4d4d4d; }
+  .womenCollection__description {
+    width: 55%;
+    text-align: center;
+    border-bottom: 1px solid #eaeaea;
+    margin-bottom: 63px; }
+    .womenCollection__description__long {
       font-size: 14px;
       font-weight: 300;
-      margin-bottom: 24px; }
-    .orderForms__coupon input[type="text"] {
-      min-height: 45px;
-      width: 100%;
-      border: 1px solid #eaeaea;
-      font-size: 13px;
-      font-weight: 400;
-      padding-left: 18px;
-      margin-bottom: 20px;
-      box-sizing: border-box; }
-      .orderForms__coupon input[type="text"]::placeholder {
-        color: #b1b1b1; }
-    .orderForms__coupon input[type="submit"] {
-      padding: 12px 15px;
-      font-size: 11px;
-      font-weight: 700;
-      text-transform: uppercase;
-      background-color: #ffffff;
-      border: 1px solid #eaeaea;
-      cursor: pointer; }
-      .orderForms__coupon input[type="submit"]:hover {
-        background-color: #eaeaea; }
-  .orderForms__total {
-    background-color: #f5f3f3;
-    width: 30%;
-    max-height: 80%;
-    padding: 3%;
-    box-sizing: border-box; }
-    .orderForms__total__subTotal {
-      color: #4a4a4a;
-      font-size: 11px;
-      font-weight: 400;
-      text-transform: uppercase;
-      display: flex;
-      justify-content: flex-end;
-      margin-bottom: 14px; }
-      .orderForms__total__subTotal p:first-child {
-        margin-right: 16px; }
-    .orderForms__total__grandTotal {
-      font-size: 16px;
-      font-weight: 700;
-      text-transform: uppercase;
-      display: flex;
-      justify-content: flex-end;
-      padding-bottom: 22px;
-      border-bottom: 1px solid #e2e2e2;
-      margin-bottom: 17px; }
-      .orderForms__total__grandTotal p:first-child {
-        margin-right: 16px; }
-      .orderForms__total__grandTotal p:last-child {
-        color: #f16d7f; }
-    .orderForms__total__checkout {
-      padding: 19px 40px;
-      background-color: #f16d7f;
-      color: #ffffff;
-      font-size: 16px;
-      font-weight: 700;
-      text-transform: uppercase;
+      line-height: 24px;
+      margin-bottom: 28px; }
+    .womenCollection__description__short {
       display: flex;
       justify-content: center;
-      align-items: center; }
-      .orderForms__total__checkout:hover {
-        background-color: #e21632; }
-      .orderForms__total__checkout__a {
-        color: #ffffff;
-        font-size: 16px;
+      margin-bottom: 37px; }
+      .womenCollection__description__short p {
+        color: #b9b9b9;
+        font-size: 14px;
         font-weight: 700;
         text-transform: uppercase; }
+        .womenCollection__description__short p:first-child {
+          margin-right: 7%; }
+        .womenCollection__description__short p span {
+          color: #2f2f2f; }
+    .womenCollection__description__price {
+      font-size: 24px;
+      font-weight: 700;
+      color: #f16d7f;
+      margin-bottom: 43px; }
+  .womenCollection__form {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    margin-bottom: 28px; }
+    .womenCollection__form__label {
+      color: #2f2f2f;
+      font-size: 14px;
+      font-weight: 700;
+      text-transform: uppercase;
+      display: flex;
+      flex-direction: column;
+      width: 25%; }
+      .womenCollection__form__label:last-child {
+        margin-right: 0; }
+      .womenCollection__form__label p {
+        margin-bottom: 16px;
+        color: #2f2f2f;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase; }
+      .womenCollection__form__label__select {
+        border: 1px solid #eaeaea;
+        height: 35px; }
+      .womenCollection__form__label input[type="number"] {
+        height: 35px;
+        border: 1px solid #eaeaea;
+        padding-left: 17px; }
+        .womenCollection__form__label input[type="number"]::placeholder {
+          color: #bcbcbc;
+          font-size: 14px;
+          font-weight: 400; }
+  .womenCollection__a {
+    cursor: pointer;
+    width: 50%;
+    height: 55px;
+    background-color: #ffffff;
+    color: #f16d7f;
+    border: 1px solid #f16d7f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 122px; }
+    .womenCollection__a img {
+      margin-right: 15px; }
+    .womenCollection__a:hover {
+      background-color: #eaeaea; }
 
-/*# sourceMappingURL=shoppingCart.css.map */
+.likeAlso {
+  text-align: center; }
+  .likeAlso h2 {
+    color: #4d4d4d;
+    font-size: 24px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin-bottom: 72px; }
+  .likeAlso__items {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 94px; }
+    .likeAlso__items__item {
+      width: 22%;
+      margin-right: 4%; }
+      .likeAlso__items__item:hover {
+        cursor: pointer; }
+        .likeAlso__items__item:hover > div {
+          opacity: 0.5; }
+      .likeAlso__items__item:last-child {
+        margin-right: 0; }
+      .likeAlso__items__item__img {
+        background-color: #e9e9e9;
+        min-height: 283px;
+        margin-bottom: 18px; }
+      .likeAlso__items__item p {
+        text-align: start;
+        padding-left: 14px; }
+      .likeAlso__items__item__title {
+        color: #6f6e6e;
+        font-size: 14px;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin-bottom: 17px; }
+      .likeAlso__items__item__price {
+        font-size: 16px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #f16d7f; }
+
+/*# sourceMappingURL=singlePage.css.map */
